:hammer: refactor: fixed somethings up

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -79,7 +79,7 @@
     background-position: 0 0;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
-    font-weight: <weight>;
+    /*font-weight: <weight>;*/
     font-style: normal;
   }
 
